// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`important > https://github.com/sonofmagic/weapp-tailwindcss/issues/470 1`] = `
"@layer properties;
:root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
#app-provider {
  .space-x-4 {
    :where(& > :not(:last-child)) {
      --tw-space-x-reverse: 0;
      margin-inline-start: calc(calc(var(--spacing) * 4) * var(--tw-space-x-reverse));
      margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
    }
  }
}
@property --tw-space-x-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-x-reverse: 0;
    }
  }
}"
`;

exports[`important > https://github.com/sonofmagic/weapp-tailwindcss/issues/470 2`] = `
"
    view,text,::before,::after {
      --tw-space-x-reverse: 0;
    }
page,.tw-root,wx-root-portal-content,:host {
  --spacing: .25rem;
}
view,text,::after,::before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
#app-provider .space-x-4>view+view {
      --tw-space-x-reverse: 0;
      margin-right: calc((var(--spacing) * 4) * var(--tw-space-x-reverse));
      margin-left: calc((var(--spacing) * 4) * (1 - var(--tw-space-x-reverse)));
    }"
`;

exports[`important > https://github.com/sonofmagic/weapp-tailwindcss/issues/470 case 0 1`] = `
"@layer properties;
:root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.app-provider {
  .space-x-4 {
    :where(& > :not(:last-child)) {
      --tw-space-x-reverse: 0;
      margin-inline-start: calc(calc(var(--spacing) * 4) * var(--tw-space-x-reverse));
      margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
    }
  }
}
@property --tw-space-x-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-x-reverse: 0;
    }
  }
}"
`;

exports[`important > https://github.com/sonofmagic/weapp-tailwindcss/issues/470 case 0 2`] = `
"
    view,text,::before,::after {
      --tw-space-x-reverse: 0;
    }
page,.tw-root,wx-root-portal-content,:host {
  --spacing: .25rem;
}
view,text,::after,::before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.app-provider .space-x-4>view+view {
      --tw-space-x-reverse: 0;
      margin-right: calc((var(--spacing) * 4) * var(--tw-space-x-reverse));
      margin-left: calc((var(--spacing) * 4) * (1 - var(--tw-space-x-reverse)));
    }"
`;

exports[`important > https://github.com/sonofmagic/weapp-tailwindcss/issues/470 case 1 1`] = `
"@layer properties;
:root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.app-provider[data-v-hash] {
  .space-x-4 {
    :where(& > :not(:last-child)) {
      --tw-space-x-reverse: 0;
      margin-inline-start: calc(calc(var(--spacing) * 4) * var(--tw-space-x-reverse));
      margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
    }
  }
}
@property --tw-space-x-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-x-reverse: 0;
    }
  }
}"
`;

exports[`important > https://github.com/sonofmagic/weapp-tailwindcss/issues/470 case 1 2`] = `
"
    view,text,::before,::after {
      --tw-space-x-reverse: 0;
    }
page,.tw-root,wx-root-portal-content,:host {
  --spacing: .25rem;
}
view,text,::after,::before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.app-provider[data-v-hash] .space-x-4>view+view {
      --tw-space-x-reverse: 0;
      margin-right: calc((var(--spacing) * 4) * var(--tw-space-x-reverse));
      margin-left: calc((var(--spacing) * 4) * (1 - var(--tw-space-x-reverse)));
    }"
`;

exports[`important > normal 1`] = `
"@layer properties;
:root, :host {
  --spacing: .25rem;
}
*,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-x-4 {
  :where(& > :not(:last-child)) {
    --tw-space-x-reverse: 0;
    margin-inline-start: calc(calc(var(--spacing) * 4) * var(--tw-space-x-reverse));
    margin-inline-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
  }
}
@property --tw-space-x-reverse {
  syntax: "*";
  inherits: false;
  initial-value: 0;
}
@layer properties {
  @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
    *, ::before, ::after, ::backdrop {
      --tw-space-x-reverse: 0;
    }
  }
}"
`;

exports[`important > normal 2`] = `
"
    view,text,::before,::after {
      --tw-space-x-reverse: 0;
    }
page,.tw-root,wx-root-portal-content,:host {
  --spacing: .25rem;
}
view,text,::after,::before {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.space-x-4>view+view {
    --tw-space-x-reverse: 0;
    margin-right: calc((var(--spacing) * 4) * var(--tw-space-x-reverse));
    margin-left: calc((var(--spacing) * 4) * (1 - var(--tw-space-x-reverse)));
  }"
`;
